# solvePlane

./: CMakeLists.txt
src/: main.cpp
